<?xml version="1.0"?>
<package format="3">
  <name>rob499_final</name>
  <version>0.0.0</version>
  <description>ROS 2 Python node package for ROB499 Final Project</description>
  <maintainer email="ramosalm@oregonstate.edu">Ramos-Mat</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rob499_final_cm</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
