<?xml version="1.0"?>
<package format="3">
  <name>rob499_final_cm</name>
  <version>0.0.0</version>
  <description>messages and services</description>
  <maintainer email="ramosalm@oregonstate.edu">Ramos-Mat</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
